--- a/src/ansible/requirements.yml
+++ b/src/ansible/requirements.yml
@@ -2,7 +2,8 @@
 roles:
   - src: ten7.flightdeck_base
     version: 5.1.3
-  - src: https://github.com/ten7/mysql-backup
+  - name: ten7.mysql_backup
+    src: https://github.com/ten7/mysql-backup
     version: 1.0.2
 collections:
   - name: cloud.common
